--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@ html {
 }
 
 body {
-  height: 100%;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,6 +10,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #D2D1D1;
 }
 
 .Root{
